tempfile/derive_more/tests/compile_fail/into/mixed_field_skip_types.rs
#[derive(derive_more::Into)]
struct Foo {
    #[into(skip, i32)]
    a: i32,
}

fn main() {}
